--- a/01_maioridade.html
+++ b/01_maioridade.html
@@ -4,9 +4,10 @@
     //Leia a idade de uma pessoa e informe se ela já chegou à maioridade.Se ela ainda não chegou, informe quantos anos faltam para a maioridade.
 
     //Entrada
-
+let idade = Number(prompt(`Informe sua idade.`));
 
     //Processamento
+(idade<18)? alert(`faltam ${18-idade} anos para completar 18`): alert(`Você já tingiu a maioridade`);
 
 
     //Saída
