--- a/04_vogal.html
+++ b/04_vogal.html
@@ -4,10 +4,10 @@
     //Construa um programa que leia um caractere e informe se este caractere é uma vogal.
 
     //Entrada
-
+    const letra = Number(prompt(`Insira uma letra`));
 
     //Processamento
-
+(letra == "a" || "e" || "i" ||  "o" || "u")? alert(`A letra ${letra} não é vogal`): alert(`A letra ${letra} é vogal.`);
     
     //Saída
 
