--- a/05_aumentoPreco.html
+++ b/05_aumentoPreco.html
@@ -8,11 +8,11 @@
         //- acima de 1500: aumento de 5 %
     
     //Entrada
-
+const preco = Number(prompt(`Informe o preço do produto:`));
 
     //Processamento
+(preco >= 280)? alert(`Com o almento de 20% seu produto fica ${preco * 20/100}`):
 
-    
+
     //Saída
-
 </script>
