--- a/02_eleitor.html
+++ b/02_eleitor.html
@@ -4,10 +4,10 @@
     //Considerando que no Brasil é possível votar a partir dos 16 anos de idade, leia o ano de nascimento de uma pessoa e informe se ela poderá votar no ano atual. Ignore mês e dia de nascimento.
 
     //Entrada
-
+    const anoNascimento = Number(prompt(`Informe seu ano de nascimento`));
 
     //Processamento
-
+(new Date().getFullYear() - anoNascimento < 16)? alert(`Você ainda não pode voltar, você tem ${new Date().getFullYear() - anoNascimento} anos`): alert(`Você ja pode votar`);
 
     //Saída
 
