--- a/07_notaParaConceito.html
+++ b/07_notaParaConceito.html
@@ -10,10 +10,9 @@
     // Entre 5.9 e zero            E
 
     //Entrada
-
-
+    const nota = Number(prompt(`Informe sua nota`).replace(",","."));
     //Processamento
-
+    (nota >= 9) ? alert(`Sua nota foi A`) : (nota >= 8) ? alert(`Sua nota foi B`) : (nota >= 7) ? alert(`Sua nota foi C`) : (nota >= 6) ? alert(`Sua nota foi D`) : alert(`sua nota foi E`);
     
     //Saída
 
